<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PSE Mobile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_shopping_cart">Shopping Cart</string>
    <string name="menu_title_margin_requirement">Margin Requirement</string>
    <string name="menu_title_add_item">Add Item</string>
    <string name="menu_title_select_all">Select All</string>
    <string name="menu_title_unselect_all">Unselect All</string>
    <string name="menu_title_add_group">Add Group</string>
    <string name="menu_title_remove_quantities">Remove Quantities</string>
    <string name="menu_title_remove_all">Remove All</string>
    <string name="menu_title_project_price_info">Pse Worksheet</string>
    <string name="menu_title_delete">Delete</string>
    <string name="menu_title_remove">Remove</string>
    <string name="menu_title_cart">Cart</string>
    <string name="menu_title_add">Add</string>
    <string name="hint_currency_placeholder">$0.00</string>

    <string-array name="fence_categories">
        <item>@string/ARG_CATEGORY_WOOD_FENCE</item>
        <item>@string/ARG_CATEGORY_CHAINLINK_FENCE</item>
        <item>@string/ARG_CATEGORY_VINYL_FENCE</item>
        <item>@string/ARG_CATEGORY_COMPOSITE_FENCE</item>
        <item>@string/ARG_CATEGORY_METAL_FENCE</item>
    </string-array>
    <string-array name="siding_categories">
        <item>@string/ARG_CATEGORY_CEMENT_SIDING</item>
        <item>@string/ARG_CATEGORY_VINYL_SIDING</item>
    </string-array>
    <string-array name="roof_categories">
        <item>@string/ARG_CATEGORY_METAL_ROOF</item>
        <item>@string/ARG_CATEGORY_SHINGLE_ROOF</item>
    </string-array>
    <string-array name="project_categories">
        <item>@string/ARG_CATEGORY_DOOR</item>
        <item>@string/ARG_CATEGORY_WINDOW</item>
        <item>@string/ARG_CATEGORY_ROOF</item>
        <item>@string/ARG_CATEGORY_INSULATION</item>
        <item>@string/ARG_CATEGORY_FENCING</item>
        <item>@string/ARG_CATEGORY_DECKING</item>
        <item>@string/ARG_CATEGORY_SIDING</item>
        <item>@string/ARG_CATEGORY_GUTTER</item>
    </string-array>

    <string name="dialog_title_siding_category">Siding Category</string>
    <string name="dialog_title_fence_category">Fencing Category</string>
    <string name="title_activity_projectcategories">Project</string>
    <string name="title_tab_pse">PSE</string>
    <string name="title_tab_installation">Installation</string>
    <string name="title_activity_project_wizard">M2O</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="label_retail">Retail:</string>
    <string name="label_cost">Cost:</string>
    <string name="label_price">Price:</string>
    <string name="label_total">Total:</string>
    <string name="label_cart_total">Total:</string>
    <string name="label_cart_subtotal">Subtotal:</string>
    <string name="label_tax">Tax:</string>
    <string name="label_currencyholder">$0.00</string>
    <string name="label_select_group">Select Group:</string>
    <string name="label_select_assortment">Select Assortment:</string>
    <string name="label_select_item">Select Item:</string>
    <string name="ARG_CATEGORY_PROJECT_CATALOG">Project Catalog</string>
    <string name="ARG_CATEGORY_SIDING">Siding</string>
    <string name="ARG_CATEGORY_FENCING">Fence</string>
    <string name="ARG_CATEGORY_WINDOW">Window</string>
    <string name="ARG_CATEGORY_DECKING">Deck</string>
    <string name="ARG_CATEGORY_INSULATION">Insulation</string>
    <string name="ARG_CATEGORY_GUTTER">Gutter</string>
    <string name="ARG_CATEGORY_VINYL_SIDING">Vinyl Siding</string>
    <string name="ARG_CATEGORY_CEMENT_SIDING">Cement Siding</string>
    <string name="ARG_CATEGORY_DOOR">Door</string>
    <string name="ARG_CATEGORY_ROOF">Roof</string>
    <string name="ARG_CATEGORY_METAL_ROOF">Metal Roof</string>
    <string name="ARG_CATEGORY_SHINGLE_ROOF">Shingle Roof</string>
    <string name="ARG_CATEGORY_CHAINLINK_FENCE">Chainlink Fence</string>
    <string name="ARG_CATEGORY_WOOD_FENCE">Wood Fence</string>
    <string name="ARG_CATEGORY_COMPOSITE_FENCE">Composite Fence</string>
    <string name="ARG_CATEGORY_METAL_FENCE">Metal Fence</string>
    <string name="ARG_CATEGORY_VINYL_FENCE">Vinyl Fence</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>
    <string name="submit_confirm_message">Added Item to Project</string>
    <string name="submit_confirm_button">Complete Item</string>
    <string name="title_activity_m2o_sos_">M2O</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>