<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/slide_handle_view"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"
	android:background="@android:color/background_dark"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
		android:padding="1dp" >

        <ImageButton
			android:id="@+id/cart_options_imgbtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:background="?android:attr/actionBarItemBackground"
			android:contentDescription="Delete All Item Quantities"
			android:scaleType="centerInside"
			android:src="@android:drawable/ic_menu_more"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/cart_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/menu_title_shopping_cart"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
                android:textColor="#fff"
                android:typeface="serif"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/cart_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:gravity="center|left"
                android:text="(0)"
                android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
                android:textColor="#fff"
                android:typeface="serif"
                android:textIsSelectable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/actionBarItemBackground"
            android:src="@drawable/ic_action_expandcart"
            android:id="@+id/cart_handle_imgbtn" />

    </LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/label_cart_subtotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/label_cart_subtotal"
				android:textColor="#fff"
				android:textSize="12sp"
				android:typeface="serif" />

			<TextView
				android:id="@+id/cart_subtotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/hint_currency_placeholder"
				android:textColor="#fff"
                android:typeface="serif"
                android:padding="2dp"
                android:textSize="14dp" />
		</LinearLayout>

		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@android:color/background_light" />

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/label_cart_tax"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/label_tax"
				android:textColor="#fff"
				android:textSize="12sp"
				android:typeface="serif" />

			<TextView
				android:id="@+id/cart_tax"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/hint_currency_placeholder"
				android:textColor="#fff"
				android:textSize="14sp"
				android:typeface="serif"
                android:padding="2dp" />
		</LinearLayout>

		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@android:color/background_light" />

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/label_cart_total"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/label_cart_total"
				android:textColor="#fff"
				android:textSize="12sp"
				android:typeface="serif" />

			<TextView
				android:id="@+id/cart_total"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/hint_currency_placeholder"
				android:textColor="#fff"
                android:typeface="serif"
                android:padding="2dp"
                android:textSize="14dp" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>